# BankPredictorLLM

./: .gitignore  README.md  pyproject.toml  runner.bat
data/: customer_profile_data.csv  customer_profile_insert_statements.sql  faker_data.py  inserting_data.py
src/: app.py  client.py  config.py  customer_profile.json  packages.txt  products.json  requestsop.py  requirements.txt  unlockPassword.py
