[tool.poetry]
name = "bank-llm"
version = "0.1.0"
description = "A bank product recommendation system using LLMs"
authors = ["Ayush"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.2"
langchain = "^0.0.345"
langchain-google-genai = "^0.0.2"
langchain_community = "^0.0.8"
faiss-cpu = "^1.7.4"
pypdfium2 = "^4.25.0"
pytesseract = "^0.3.10"
Pillow = "^10.1.0"
requests = "^2.31.0"
mysql-connector-python = "^8.2.0"
SQLAlchemy = "^2.0.23"
pandas = "^2.1.3"
python-dotenv = "^1.0.0"
streamlit = "^1.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
